MAINT-2875 Improve alignment with validator for which designations are included when requested language matches available dialects